# libmm

./: .gitignore  CMakeLists.txt  build.ninja  example.cpp  makefile  mmmatrix.cpp  mmvec.cpp  mmvec.hpp
cmake/: MMConfig.cmake.in
include/: mm.hpp  mmmatrix.hpp  mmvec.hpp
include/mm/: algorithm.hpp  mmiterator.hpp  mmmatrix.hpp  mmvec.hpp  view.hpp
include/mm/experiments/: iterators.hpp  mmdiag_matrix.hpp  mmsubdiag.h  old.hpp  tranpositions.hpp
ninja/: rules.ninja
test/: CMakeLists.txt  matrix_example.cpp  vec_example.cpp
